[gd_scene load_steps=10 format=3 uid="uid://dbl6sigulrew8"]

[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="1_7isfi"]
[ext_resource type="Script" path="res://Scripts/Buttons/GamepadUI.gd" id="1_gliny"]
[ext_resource type="Script" path="res://Scripts/Buttons/BackScript.gd" id="3_uwmcr"]
[ext_resource type="Script" path="res://Scripts/settings.gd" id="4_fs3n1"]
[ext_resource type="LabelSettings" uid="uid://m61ok162yvmy" path="res://Assets/Fonts/pixelFont.tres" id="5_e5vn6"]
[ext_resource type="LabelSettings" uid="uid://bg3bjthyi6ao5" path="res://Assets/Fonts/settingsFont.tres" id="6_fiaql"]
[ext_resource type="Script" path="res://Scripts/floating_section.gd" id="6_p0cnu"]
[ext_resource type="Script" path="res://Scripts/floating_ui.gd" id="6_yel2d"]

[sub_resource type="LabelSettings" id="LabelSettings_56lap"]
font = ExtResource("1_7isfi")
font_size = 64

[node name="Settings" type="Node2D"]
z_index = 15

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Settings" type="Control" parent="." node_paths=PackedStringArray("FirstControl")]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1136.0
offset_top = -564.0
offset_right = -1136.0
offset_bottom = -564.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_gliny")
FirstControl = NodePath("ScrollContainer/MarginContainer/SettingsPanel2/General/LanguagesMode/HSplitContainer/LanguagesSlider")

[node name="Title" type="Label" parent="Settings"]
layout_mode = 2
offset_left = 309.0
offset_top = -15.5
offset_right = 830.0
offset_bottom = 72.5
text = "SETTINGS"
label_settings = SubResource("LabelSettings_56lap")
horizontal_alignment = 1
script = ExtResource("6_yel2d")

[node name="Back" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -40.0
offset_right = 114.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(66.5, 28.5)
theme_override_fonts/font = ExtResource("1_7isfi")
theme_override_font_sizes/font_size = 24
text = "BACK"
script = ExtResource("3_uwmcr")
scroll_direction = Vector2(-1, 0)
vertical_intensity = 15.0
horizontal_intensity = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Settings"]
layout_mode = 0
offset_left = -72.0
offset_top = 77.5
offset_right = 995.0
offset_bottom = 518.5
scale = Vector2(1.2, 1.2)
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 30

[node name="SettingsPanel2" type="VBoxContainer" parent="Settings/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1
script = ExtResource("4_fs3n1")

[node name="SubTitle3" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
text = "GENERAL"
label_settings = ExtResource("5_e5vn6")
horizontal_alignment = 1
script = ExtResource("6_p0cnu")
vertical_intensity = 5.0
horizontal_intensity = 5

[node name="General" type="VBoxContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LanguagesMode" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/General"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/General/LanguagesMode"]
layout_mode = 2
dragger_visibility = 1

[node name="Languages" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/General/LanguagesMode/HSplitContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "LANGUAGES"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="LanguagesSlider" type="OptionButton" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/General/LanguagesMode/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_7isfi")
alignment = 1

[node name="SubTitle" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
text = "DISPLAY"
label_settings = ExtResource("5_e5vn6")
horizontal_alignment = 1
script = ExtResource("6_p0cnu")
vertical_intensity = 5.0
horizontal_intensity = 5

[node name="Display" type="VBoxContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DisplayMode" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/DisplayMode"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
dragger_visibility = 1

[node name="Fullscreen" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/DisplayMode/HSplitContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "FULLSCREEN"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="FullscreenCheckBox" type="CheckButton" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/DisplayMode/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0

[node name="V-Sync" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/V-Sync"]
layout_mode = 2
dragger_visibility = 1

[node name="Label" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/V-Sync/HSplitContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "VSYNC"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="VsyncSlider" type="OptionButton" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/V-Sync/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_7isfi")

[node name="SubTitle2" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
text = "AUDIO"
label_settings = ExtResource("5_e5vn6")
horizontal_alignment = 1
script = ExtResource("6_p0cnu")
vertical_intensity = 5.0
horizontal_intensity = 5

[node name="Sounds" type="VBoxContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Master" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/Master"]
layout_mode = 2
dragger_visibility = 1

[node name="Resolution" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/Master/HSplitContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "MASTER"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="MasterSlider" type="HSlider" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/Master/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer2"]
layout_mode = 2
dragger_visibility = 1

[node name="Resolution" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer2/HSplitContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "MUSIC"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer2/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="HBoxContainer3" type="CenterContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds"]
layout_mode = 2
script = ExtResource("6_p0cnu")
vertical_intensity = 2.5
horizontal_intensity = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer3"]
layout_mode = 2
dragger_visibility = 1

[node name="Resolution" type="Label" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer3/HSplitContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "SFX"
label_settings = ExtResource("6_fiaql")
horizontal_alignment = 2

[node name="SFXSlider" type="HSlider" parent="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer3/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 0
max_value = 1.0
step = 0.01

[connection signal="mouse_entered" from="Settings/Back" to="Settings/Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings/Back" to="Settings/Back" method="_on_mouse_exited"]
[connection signal="pressed" from="Settings/Back" to="Settings/Back" method="_on_pressed"]
[connection signal="item_selected" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/General/LanguagesMode/HSplitContainer/LanguagesSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_languages_slider_item_selected"]
[connection signal="toggled" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/DisplayMode/HSplitContainer/FullscreenCheckBox" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_fullscreen_check_box_toggled"]
[connection signal="item_selected" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Display/V-Sync/HSplitContainer/VsyncSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_vsync_slider_item_selected"]
[connection signal="value_changed" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/Master/HSplitContainer/MasterSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer2/HSplitContainer/MusicSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer3/HSplitContainer/SFXSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="Settings/ScrollContainer/MarginContainer/SettingsPanel2/Sounds/HBoxContainer3/HSplitContainer/SFXSlider" to="Settings/ScrollContainer/MarginContainer/SettingsPanel2" method="_on_sfx_slider_value_changed"]
